# ChangeLog for app-cdr/k9copy
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/k9copy/ChangeLog,v 1.32 2008/01/01 18:33:44 carlo Exp $

*k9copy-1.2.2 (01 Jan 2008)

  01 Jan 2008; Carsten Lohrke <carlo@gentoo.org>
  +files/k9copy-1.2.2-desktop-entry.diff, +k9copy-1.2.2.ebuild:
  Version bump.

  22 Dec 2007; Carsten Lohrke <carlo@gentoo.org> k9copy-1.2.1.ebuild:
  Check Qt 3 being built with OpenGL support.

*k9copy-1.2.1 (08 Dec 2007)

  08 Dec 2007; Matteo Azzali <mattepiu@gentoo.org> +k9copy-1.2.1.ebuild:
  Version Bump.

  01 Nov 2007; Tobias Heinlein <keytoaster@gentoo.org>
  -k9copy-1.0.3b.ebuild, -k9copy-1.1.0.ebuild, -k9copy-1.1.1_p2.ebuild,
  -k9copy-1.1.1_p3.ebuild, -k9copy-1.1.2.ebuild:
  Cleaning out old versions.

*k9copy-1.2.0 (01 Nov 2007)

  01 Nov 2007; Tobias Heinlein <keytoaster@gentoo.org> +k9copy-1.2.0.ebuild:
  Version bump.

  22 Aug 2007; Tobias Heinlein <keytoaster@gentoo.org> k9copy-1.0.3b.ebuild,
  k9copy-1.0.4.ebuild, k9copy-1.1.0.ebuild, k9copy-1.1.1_p2.ebuild,
  k9copy-1.1.1_p3.ebuild, k9copy-1.1.2.ebuild:
  Adding a fix to the desktop file for compliance with the spec.

*k9copy-1.1.3 (22 Aug 2007)

  22 Aug 2007; Tobias Heinlein <keytoaster@gentoo.org> +k9copy-1.1.3.ebuild:
  Version bump, see bug 189866

  08 Aug 2007; Tobias Heinlein <keytoaster@gentoo.org> k9copy-1.0.3b.ebuild,
  k9copy-1.0.4.ebuild, k9copy-1.1.0.ebuild, k9copy-1.1.1_p2.ebuild,
  k9copy-1.1.1_p3.ebuild, k9copy-1.1.2.ebuild:
  Small typo fix in all DESCRIPTIONs and adjusting copyright line.

*k9copy-1.1.2 (08 Aug 2007)

  08 Aug 2007; Tobias Heinlein <keytoaster@gentoo.org> +k9copy-1.1.2.ebuild:
  Version bump, see bug 188045

  09 Jul 2007; Joseph Jezak <josejx@gentoo.org> k9copy-1.1.1_p3.ebuild:
  Marked ~ppc for bug #184362.

*k9copy-1.1.1_p3 (01 Apr 2007)

  01 Apr 2007; Carsten Lohrke <carlo@gentoo.org> +k9copy-1.1.1_p3.ebuild:
  Version bump.
