@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX k9copy-1.1.2_p2-desktop-entry.diff 509 RMD160 c634e6c868fc0a520633e0409a1fa1356c66a51e SHA1 10a78b047f7e79e5c1474b0b870d0758f3dae395 SHA256 918da88482e314a2ad499efda290da1e111169059f54615cfd8e96ae6306dbd3
 MD5 ce0b04897d657be5ff28912e4f89c3c5 files/k9copy-1.1.2_p2-desktop-entry.diff 509
 RMD160 c634e6c868fc0a520633e0409a1fa1356c66a51e files/k9copy-1.1.2_p2-desktop-entry.diff 509
@@ -23,18 +26,18 @@ EBUILD k9copy-1.2.0.ebuild 1115 RMD160 29d6ccd7d1be56512015c83311551324cadb0404 
 MD5 4263349c783728f4a5b4e089917ee27b k9copy-1.2.0.ebuild 1115
 RMD160 29d6ccd7d1be56512015c83311551324cadb0404 k9copy-1.2.0.ebuild 1115
 SHA256 4d57afef1205721caade7bd4dcd08c658e89077fdeda2795b8764031a16cec0f k9copy-1.2.0.ebuild 1115
-EBUILD k9copy-1.2.1.ebuild 1400 RMD160 9ec9c9ecd45ddcf30a81bbe96d4146bc629231ab SHA1 29df9ed7ccc321f6c4e8de3157fc4daeab579787 SHA256 7b788df375ec9147c4f05df7fe02a43d023eab6f67f8df22bb5468999a467ee2
-MD5 c1c69eac0fb01faa3059aee693a5781d k9copy-1.2.1.ebuild 1400
-RMD160 9ec9c9ecd45ddcf30a81bbe96d4146bc629231ab k9copy-1.2.1.ebuild 1400
-SHA256 7b788df375ec9147c4f05df7fe02a43d023eab6f67f8df22bb5468999a467ee2 k9copy-1.2.1.ebuild 1400
-EBUILD k9copy-1.2.2.ebuild 1102 RMD160 a41f87bfc1ee52a089f4956e68b7513a56fbbebe SHA1 e6025c63d9cbc80271f576a05637f01b8ce6cdc3 SHA256 e649f80b0d71614091db4bd5f5824946f1f286dbcbf1b380339698191cb14ab4
-MD5 26d4419b4d0fae274a7886292633739d k9copy-1.2.2.ebuild 1102
-RMD160 a41f87bfc1ee52a089f4956e68b7513a56fbbebe k9copy-1.2.2.ebuild 1102
-SHA256 e649f80b0d71614091db4bd5f5824946f1f286dbcbf1b380339698191cb14ab4 k9copy-1.2.2.ebuild 1102
-MISC ChangeLog 5369 RMD160 372441dbe3156a39042a15ea6097825b7869060a SHA1 bbd26cf8c3ec2e1899cd59c624541a9bd6224cee SHA256 0b6e573dccd1a5f03db31cda08900af5e7dc63248d6beef00e64d44054f52145
-MD5 4f96a7d6941ec527bb23d8c92407c4f0 ChangeLog 5369
-RMD160 372441dbe3156a39042a15ea6097825b7869060a ChangeLog 5369
-SHA256 0b6e573dccd1a5f03db31cda08900af5e7dc63248d6beef00e64d44054f52145 ChangeLog 5369
+EBUILD k9copy-1.2.1.ebuild 1405 RMD160 aa00c4289950380ee142f284fa68717fe04db0cc SHA1 b47ee72a82a7bc1142fad14cdf471e19e8d25f1f SHA256 9a6113d6dc2e921838e4483facca373d3aa23239f47629f08287c22bdf1d3ba0
+MD5 a27a2a8645bcb237e2b392619a6df9a6 k9copy-1.2.1.ebuild 1405
+RMD160 aa00c4289950380ee142f284fa68717fe04db0cc k9copy-1.2.1.ebuild 1405
+SHA256 9a6113d6dc2e921838e4483facca373d3aa23239f47629f08287c22bdf1d3ba0 k9copy-1.2.1.ebuild 1405
+EBUILD k9copy-1.2.2.ebuild 1103 RMD160 fbb48d805c0d51e53572fcf6e0ea203aaad7f8eb SHA1 cf5c61f51e6e3b2934f42afcfe265da5f0ec3a95 SHA256 883ba19af7fd1fdbb82142011e524d9213b49d9346f3b5390251ff6b97eefb95
+MD5 44c0d07c6a6b8b8a6b018aadd191c447 k9copy-1.2.2.ebuild 1103
+RMD160 fbb48d805c0d51e53572fcf6e0ea203aaad7f8eb k9copy-1.2.2.ebuild 1103
+SHA256 883ba19af7fd1fdbb82142011e524d9213b49d9346f3b5390251ff6b97eefb95 k9copy-1.2.2.ebuild 1103
+MISC ChangeLog 5513 RMD160 7435401a3e570de216035c2aefdd5a595428c3c9 SHA1 155868fc82467b457eba08d22eda0dbaab04f9f1 SHA256 4746bdada1d1953f3597821346f488bc0dac3f7f06d33cf4e567ee067554d68b
+MD5 b88db2fee9402526543f4dd5239c9877 ChangeLog 5513
+RMD160 7435401a3e570de216035c2aefdd5a595428c3c9 ChangeLog 5513
+SHA256 4746bdada1d1953f3597821346f488bc0dac3f7f06d33cf4e567ee067554d68b ChangeLog 5513
 MISC metadata.xml 301 RMD160 5424abb33cb1576f2742e6bbd75fa370c40214d1 SHA1 ce66e4b54d1cd620faddeacacceac59b5ede47ed SHA256 76010afeff62952f70b9b598778d4d198eabd1ec9e233902acd2c4019911745a
 MD5 80b81e0016b1f3cb6c95459a0e35fc87 metadata.xml 301
 RMD160 5424abb33cb1576f2742e6bbd75fa370c40214d1 metadata.xml 301
@@ -54,3 +57,10 @@ SHA256 c8d76bcd5f163b77f76e8d342e7775915e50d9054af4883540c8644ecdeb80bf files/di
 MD5 41949057528f287956f9f53341f9ebb5 files/digest-k9copy-1.2.2 241
 RMD160 f5302909b8075dd17a0130d71cad99747f6a4b0e files/digest-k9copy-1.2.2 241
 SHA256 d67f6249dc915dbfa2958108bd0c1a307c403838502931e54004dca6edf652b6 files/digest-k9copy-1.2.2 241
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkeE5KcACgkQKfQzuokD2IpjegCdGHOr8HcS+sMj4YUibJQzF5Bv
+1CQAn2wWvpti+SGXd7eSdKHwS5ReqwOX
+=h9Oa
+-----END PGP SIGNATURE-----
