@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/k9copy/Attic/k9copy-1.2.1.ebuild,v 1.2 2007/12/22 20:24:37 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/k9copy/Attic/k9copy-1.2.1.ebuild,v 1.3 2008/01/09 15:13:33 keytoaster Exp $
 
 EAPI="1"
 
@@ -33,7 +33,7 @@ pkg_setup() {
 
 	if ! built_with_use x11-libs/qt:3 opengl ; then
 		eerror "K9Copy needs Qt 3 built with OpenGL support. Please set the"
-		errror "\"opengl\" use flag and run \"emerge --oneshot x11-libs/qt:3\""
+		eerror "\"opengl\" use flag and run \"emerge --oneshot x11-libs/qt:3\""
 		die "Please follow the above error message."
 	fi
 }
