@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/k9copy
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/k9copy/ChangeLog,v 1.32 2008/01/01 18:33:44 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/k9copy/ChangeLog,v 1.33 2008/01/09 15:13:33 keytoaster Exp $
+
+  09 Jan 2008; Tobias Heinlein <keytoaster@gentoo.org> k9copy-1.2.1.ebuild,
+  k9copy-1.2.2.ebuild:
+  s/errror/eerror/g; Fixes bug #205024
 
 *k9copy-1.2.2 (01 Jan 2008)
 
